# Lolcat-Translator

./: .isort.cfg  README.md  lolcat.txt  main.py  pyproject.toml  settings.env
lolcat_translator/: config.py  tranzlator.py
